CHANGE config.json - add new config value for a default font-family

--- a/config.json
+++ b/config.json
@@ -3320,6 +3320,16 @@
                     "options": {
                         "defaultValue": "#d9534f"
                     }
+                },
+                "custom-font": {
+                    "type": "inputFile",
+                    "required": false,
+                    "scss": true,
+                    "dashes": true,
+                    "label": "Custom Schriftart",
+                    "options": {
+                        "defaultValue": ""
+                    }
                 }
             }
         },
