CHANGE config.json - change custom font type to text input (for tests)

--- a/config.json
+++ b/config.json
@@ -3322,6 +3322,16 @@
                     }
                 },
                 "custom-font": {
+                    "type": "text",
+                    "required": false,
+                    "scss": true,
+                    "dashes": false,
+                    "label": "Custom Schriftart",
+                    "options": {
+                        "defaultValue": ""
+                    }
+                },
+                "test": {
                     "type": "inputFile",
                     "required": false,
                     "scss": true,
