CHANGE config.json - change test setting label

--- a/config.json
+++ b/config.json
@@ -3336,7 +3336,7 @@
                     "required": false,
                     "scss": true,
                     "dashes": true,
-                    "label": "Custom Schriftart",
+                    "label": "upload",
                     "options": {
                         "defaultValue": ""
                     }
