CHANGE config.json - change custom-font type to inputText

--- a/config.json
+++ b/config.json
@@ -3322,7 +3322,7 @@
                     }
                 },
                 "custom-font": {
-                    "type": "text",
+                    "type": "inputText",
                     "required": false,
                     "scss": true,
                     "dashes": false,
