CHANGE Head - the head will now load the custom font

--- a/config.json
+++ b/config.json
@@ -3322,21 +3322,10 @@
                     }
                 },
                 "custom-font": {
-                    "type": "inputText",
-                    "required": false,
-                    "scss": true,
-                    "dashes": false,
-                    "label": "Custom Schriftart",
-                    "options": {
-                        "defaultValue": ""
-                    }
-                },
-                "test": {
                     "type": "inputFile",
                     "required": false,
-                    "scss": true,
-                    "dashes": true,
-                    "label": "upload",
+                    "scss": false,
+                    "label": "Custom Schriftart",
                     "options": {
                         "defaultValue": ""
                     }
