--- a/config.json
+++ b/config.json
@@ -3322,7 +3322,7 @@
                     }
                 },
                 "custom-font": {
-                    "type": "text",
+                    "type": "inputFile",
                     "required": false,
                     "scss": false,
                     "label": "Custom Schriftart",
