--- a/config.json
+++ b/config.json
@@ -3322,7 +3322,7 @@
                     }
                 },
                 "custom-font-regular": {
-                    "type": "text",
+                    "type": "inputText",
                     "required": false,
                     "scss": false,
                     "label": "Custom Schriftart",
@@ -3331,7 +3331,7 @@
                     }
                 },
                 "custom-font-bold": {
-                    "type": "text",
+                    "type": "inputText",
                     "required": false,
                     "scss": false,
                     "label": "Custom Schriftart",
@@ -3340,7 +3340,7 @@
                     }
                 },
                 "custom-font-italic": {
-                    "type": "text",
+                    "type": "inputText",
                     "required": false,
                     "scss": false,
                     "label": "Custom Schriftart",
@@ -3349,7 +3349,7 @@
                     }
                 },
                 "custom-font-bold-italic": {
-                    "type": "text",
+                    "type": "inputText",
                     "required": false,
                     "scss": false,
                     "label": "Custom Schriftart",
