--- a/config.json
+++ b/config.json
@@ -351,6 +351,14 @@
                         "defaultValue": "true"
                     }
                 },
+                "header.search_show_image": {
+                    "type": "checkBox",
+                    "required": false,
+                    "label": "Config.headerSearchShowImage",
+                    "options": {
+                        "defaultValue": "false"
+                    }
+                },
                 "header.show_category_types": {
                     "type": "selectBox",
                     "required": false,
