--- a/config.json
+++ b/config.json
@@ -2207,7 +2207,7 @@
                     "required": false,
                     "label": "Config.searchShowImage",
                     "options": {
-                        "defaultValue": "false"
+                        "defaultValue": "true"
                     }
                 }
             }
