UPDATE add config to always show search bar in header

--- a/config.json
+++ b/config.json
@@ -2201,6 +2201,14 @@
                     "options": {
                         "defaultValue": "false"
                     }
+                },
+                "search.alwaysShowSearchBar": {
+                    "type": "checkBox",
+                    "required": false,
+                    "label": "Config.searchAlwaysShowSearchBar",
+                    "options": {
+                        "defaultValue": "false"
+                    }
                 }
             }
         },
