Lower Camel Case vol 2

--- a/config.json
+++ b/config.json
@@ -1316,10 +1316,10 @@
                         ]
                     }
                 },
-                "pagination.noindex": {
+                "pagination.noIndex": {
                     "type": "inputText",
                     "required": false,
-                    "label": "Config.pagination_noindex",
+                    "label": "Config.pagination_noIndex",
                     "options": {
                         "defaultValue": "0"
                     }
