Neuer Config-Werrt unter SEO -> Search Result; Abfrage im Frontend

--- a/config.json
+++ b/config.json
@@ -3277,6 +3277,36 @@
                     "options": {
                         "defaultValue": ""
                     }
+                },
+                "meta.robots_search_result": {
+                    "type": "selectBox",
+                    "required": false,
+                    "label": "Config.metaRobotsSearchResult",
+                    "options": {
+                        "defaultValue": "all",
+                        "selectBoxValues": [
+                            {
+                                "value": "all",
+                                "caption": "Config.metaRobotsAll"
+                            },
+                            {
+                                "value": "index",
+                                "caption": "Config.metaRobotsIndex"
+                            },
+                            {
+                                "value": "nofollow",
+                                "caption": "Config.metaRobotsNofollow"
+                            },
+                            {
+                                "value": "noindex",
+                                "caption": "Config.metaRobotsNoindex"
+                            },
+                            {
+                                "value": "noindex, nofollow",
+                                "caption": "Config.metaRobotsNoindexNofollow"
+                            }
+                        ]
+                    }
                 }
             }
         },
